--- a/src/style/_globals.scss
+++ b/src/style/_globals.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+@import './variables';
 
 * {
     box-sizing: border-box;
@@ -8,9 +9,8 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: white;
+    background-color: $primary-color;
     font-size: 16px;
-    font-weight: 400;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -20,7 +20,7 @@ body {
 
 h1 {
     font-size: 28px;
-    font-weight: 500;
+    font-weight: 600;
 }
 
 h2 {
