--- a/src/style/_globals.scss
+++ b/src/style/_globals.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+
 @import './variables';
 
 * {
@@ -9,7 +10,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: $primary-color;
+    background-color: #D61920;
     font-size: 16px;
     font-family: 'Poppins', sans-serif;
 }
@@ -28,7 +29,7 @@ h2 {
     font-weight: 500;
 }
 
-h1 {
-    font-size: 20px;
+h3 {
+    font-size: 18px;
     font-weight: 400;
 }
