ADD border to primary button

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -13,6 +13,7 @@
 
     &__color--primary {
         background-color: $primary-color;
+        border: $tertiary-color solid 2px;
     }
 
     &__color--secondary {
