--- a/src/routes/Home/Home.scss
+++ b/src/routes/Home/Home.scss
@@ -26,4 +26,13 @@
             width: fit-content;
         }
     }
+
+    &__treeFooter {
+        width: 100%;
+        height: 50px;
+        background-image: url('../../../public//assets/tree.png');
+        background-repeat: repeat-x;
+        background-position: bottom;
+        margin-top: 20px;
+    }
 }
