ADD capital letter for button label

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -10,6 +10,7 @@
     border-radius: 5px;
     font-size: 14px;
     font-weight: 600;
+    text-transform: uppercase;
 
     &__color--primary {
         background-color: $primary-color;
