--- a/src/routes/Home/Home.scss
+++ b/src/routes/Home/Home.scss
@@ -36,3 +36,31 @@
         margin-top: 20px;
     }
 }
+
+.info {
+    background-color: $secondary-color;
+    border: $secondary-color solid 1px;
+
+    &__container {
+        margin: 60px 16px;
+    }
+
+    &__title {
+        &--white {
+            color: black;
+        }
+
+        &--red {
+            color: $primary-color;
+        }
+    }
+
+    &__paragraph>* {
+        margin-top: 30px;
+    }
+}
+
+.giftImg {
+    display: block;
+    margin: 0 auto 80px;
+}
