--- a/src/style/_globals.scss
+++ b/src/style/_globals.scss
@@ -13,6 +13,7 @@ body {
     background-color: #D61920;
     font-size: 16px;
     font-family: 'Poppins', sans-serif;
+    letter-spacing: .5%;
 }
 
 #root {
