--- a/src/routes/Home/Home.scss
+++ b/src/routes/Home/Home.scss
@@ -83,3 +83,12 @@
         margin: 60px 16px;
     }
 }
+
+.footer {
+    text-align: center;
+    margin: 50px 16px;
+    padding-bottom: 30px;
+    color: $secondary-color;
+    font-size: 14px;
+    letter-spacing: 0.25%;
+}
