--- a/src/routes/Home/Home.scss
+++ b/src/routes/Home/Home.scss
@@ -6,11 +6,17 @@
 
     &__title {
         text-align: left;
-        color: $secondary-color;
+
+        @media screen and (min-width: $medium) {
+            text-align: center;
+        }
+
+        &--white {
+            color: $secondary-color;
+        }
 
         &--yellow {
             color: $tertiary-color;
-            text-align: left;
         }
     }
 
@@ -43,6 +49,10 @@
 
     &__container {
         margin: 60px 16px;
+
+        @media screen and (min-width: $very-large) {
+            margin: 100px 200px;
+        }
     }
 
     &__title {
@@ -73,6 +83,10 @@
     margin: 40px 16px;
     height: max-content;
     padding-bottom: 50px;
+
+    @media screen and (min-width: $very-large) {
+        margin: 100px 200px;
+    }
 }
 
 .privacy {
@@ -81,6 +95,10 @@
 
     &__container {
         margin: 60px 16px;
+
+        @media screen and (min-width: $very-large) {
+            margin: 100px 200px;
+        }
     }
 }
 
@@ -91,4 +109,8 @@
     color: $secondary-color;
     font-size: 14px;
     letter-spacing: 0.25%;
+
+    @media screen and (min-width: $very-large) {
+        margin: 100px 200px;
+    }
 }
