--- a/src/routes/CreateSecretSanta/CreateSecretSanta.scss
+++ b/src/routes/CreateSecretSanta/CreateSecretSanta.scss
@@ -12,10 +12,49 @@
 
         &--yellow {
             color: $tertiary-color;
+            margin-bottom: 50px;
         }
+    }
+
+    &__group {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        row-gap: 30px;
+        margin-bottom: 50px;
+    }
+
+    &__catTitle {
+        text-align: left;
+        margin-bottom: 30px;
     }
 }
 
 .titles {
     text-align: left;
+}
+
+.participant {
+    &__buttonContainer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        column-gap: 10px;
+    }
+
+    &__button {
+        border-radius: 60px;
+        border: none;
+        width: 40px;
+        height: 40px;
+        background-color: $tertiary-color;
+        color: $secondary-color;
+        font-weight: bold;
+        font-size: 20px;
+    }
+
+    &__number {
+        color: $secondary-color;
+    }
 }
