--- a/src/routes/Home/Home.scss
+++ b/src/routes/Home/Home.scss
@@ -57,6 +57,10 @@
 
     &__title {
         &--white {
+            color: $secondary-color;
+        }
+
+        &--black {
             color: black;
         }
 
