ADD Input componant style

--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -1,12 +1,24 @@
-input {
-    width: 100%;
-    background-color: "#F6F6F6";
-    color: "#A2A2A2";
+.input {
+    width: 80%;
     padding: 10px;
-    border: none;
+    background-color: #F6F6F6;
     border-radius: 5px;
+    border: 1px solid #ccc;
+    display: flex;
+    align-items: center;
 
-    &::after {
-        content: "fa-profil";
+    input {
+        flex: 19;
+        color: #333;
+        background-color: transparent;
+        outline: none;
+        border: none;
+        margin-right: 10px;
+    }
+
+    .input-icon {
+        flex: 1;
+        font-size: 1.2em;
+        color: #555;
     }
 }
