--- a/src/routes/CreateSecretSanta/CreateSecretSanta.scss
+++ b/src/routes/CreateSecretSanta/CreateSecretSanta.scss
@@ -18,9 +18,7 @@
 
     &__group {
         display: flex;
-        justify-content: center;
         flex-direction: column;
-        align-items: center;
         row-gap: 30px;
         margin-bottom: 50px;
     }
@@ -28,6 +26,22 @@
     &__catTitle {
         text-align: left;
         margin-bottom: 30px;
+    }
+
+    &__button {
+        text-transform: uppercase;
+        font-size: 14px;
+        font-weight: 500;
+        color: $secondary-color;
+        background-color: $primary-color;
+        border: 2px solid $secondary-color;
+        text-align: center;
+        padding: 7px 35px;
+        margin-bottom: 44px;
+        display: block;
+        margin: 0 auto;
+        border-radius: 5px;
+        font-family: 'Poppins';
     }
 }
 
@@ -55,6 +69,18 @@
     }
 
     &__number {
+        color: $secondary-color;
+    }
+
+    &__container {
+        text-align: left;
+        display: flex;
+        flex-direction: column;
+        row-gap: 20px;
+        margin-bottom: 50px;
+    }
+    
+    &__index {
         color: $secondary-color;
     }
 }
