--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -14,6 +14,7 @@
         outline: none;
         border: none;
         margin-right: 10px;
+        font-family: 'Poppins';
     }
 
     .input-icon {
