FIX bad styling

--- a/src/routes/CreateSecretSanta/CreateSecretSanta.scss
+++ b/src/routes/CreateSecretSanta/CreateSecretSanta.scss
@@ -50,6 +50,9 @@
 }
 
 .participant {
+    margin-top: 40px;
+    
+
     &__buttonContainer {
         display: flex;
         justify-content: center;
@@ -79,8 +82,12 @@
         row-gap: 20px;
         margin-bottom: 50px;
     }
-    
+
     &__index {
         color: $secondary-color;
     }
+}
+
+.lastInput {
+    background-color: green;
 }
