--- a/src/routes/SignUp/SignUp.scss
+++ b/src/routes/SignUp/SignUp.scss
@@ -1,29 +1,49 @@
-// SignIn.scss
+@import '../../style/variables';
+
 .signup {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     margin: 0;
-    /* Supprimer la marge par défaut du corps */
+
+    & h2 {
+        color: $secondary-color;
+    }
+
+    & .mainTitle {
+        display: none;
+        margin: 0;
+    }
+
+    & .mainTitle__desc {
+        display: none;
+        margin: 0;
+    }
 
     h1 {
-        color: #FFF;
+        color: $secondary-color;
         margin-bottom: 20px;
-        /* Ajouter une marge en bas pour l'espace autour du titre */
     }
 
     form {
         width: 100%;
-        /* Vous pouvez ajuster la largeur du formulaire selon vos préférences */
         display: flex;
         flex-direction: column;
         align-items: center;
         gap: 25px;
+
+        @media screen and (min-width: $medium) {
+            width: 80%;
+        }
+
+        @media screen and (min-width: $large) {
+            width: 50%;
+        }
     }
 
     .errorMessage {
-        color: #FFDD64;
+        color: $tertiary-color;
         margin: 0;
         padding: 0;
     }
@@ -32,19 +52,16 @@
         align-self: flex-end;
         margin-right: 10%;
         text-decoration: underline;
-        color: #FFF;
+        color: $secondary-color;
     }
 
     input[type="submit"] {
         margin-top: 15px;
-        /* Ajouter une marge en haut pour l'espace autour du bouton de soumission */
         padding: 10px;
         padding-inline: 40px;
-        border: 2px solid #FFF;
-        background-color: #ED1C24;
-        /* Changer la couleur de fond du bouton */
-        color: #fff;
-        /* Changer la couleur du texte du bouton */
+        border: 2px solid $secondary-color;
+        background-color: $primary-color;
+        color: $secondary-color;
         cursor: pointer;
         border-radius: 6px;
     }
@@ -55,14 +72,13 @@
         align-items: center;
 
         &-text {
-            color: #FFF;
+            color: $secondary-color;
             margin: 0;
             padding: 0;
         }
 
         &-link {
-            color: #FFDD64;
-            text-decoration: none;
+            color: $tertiary-color;
         }
     }
 }
