--- a/src/routes/SignIn/SignIn.scss
+++ b/src/routes/SignIn/SignIn.scss
@@ -69,6 +69,7 @@
     .signup {
         display: flex;
         align-items: center;
+        flex-direction: row;
 
         &-text {
             color: $secondary-color;
