ADD style to main

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -19,3 +19,4 @@
 @import '../routes/Home/Home.scss';
 @import '../routes/SignIn/SignIn.scss';
 @import '../routes/SignUp/SignUp.scss';
+@import '../routes/Profil/Profile.scss';
