--- a/src/routes/Profil/Profile.scss
+++ b/src/routes/Profil/Profile.scss
@@ -4,6 +4,10 @@
     margin: 60px 16px;
     text-align: center;
 
+    @media screen and (min-width: $very-large) {
+        margin: 100px 300px;
+    }
+
     &__container {
         display: flex;
         flex-direction: column;
