CREATE new button style

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -24,7 +24,7 @@
 
     &__tertiary {
         border: solid 2px $secondary-color;
-        background-color: transparent;
+        background-color: #ED1C24;
     }
 
     &__profile {
