ADD back button to create page

--- a/src/routes/CreateSecretSanta/CreateSecretSanta.scss
+++ b/src/routes/CreateSecretSanta/CreateSecretSanta.scss
@@ -1,7 +1,10 @@
 @import '../../style/variables';
 
-.form {
+.create {
     margin: 0 16px;
+}
+
+.form {
     text-align: center;
 
     &__title {
@@ -51,7 +54,7 @@
 
 .participant {
     margin-top: 50px;
-    
+
 
     &__buttonContainer {
         display: flex;
