--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,35 +1,46 @@
+@import '../../style/variables';
+
 /* Button container */
 .button {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #3498db;
     color: #fff;
     border: none;
     cursor: pointer;
     border-radius: 5px;
-    font-size: 16px;
-    transition: background-color 0.3s;
+    font-size: 14px;
+    font-weight: 600;
+    text-transform: uppercase;
+
+    &__color--primary {
+        background-color: $primary-color;
+        border: $tertiary-color solid 2px;
+    }
+
+    &__color--secondary {
+        background-color: $secondary-color;
+        color: $primary-color;
+    }
+
+    // transition: background-color 0.3s;
 
     /* Button hover state */
-    &:hover {
-        background-color: #2684f3;
-    }
+    // &:hover {
+    //     background-color: #2684f3;
+    // }
 
     /* Button active state (when clicked) */
-    &:active {
-        background-color: #1e6ca6;
-    }
+    // &:active {
+    //     background-color: #1e6ca6;
+    // }
 
     /* Button title */
-    & h1 {
+    & p {
         margin: 0;
-        font-size: 1rem;
-        font-weight: bold;
     }
 
     /* Button title color */
     &-title {
-        color: #fff;
 
         @media screen and (max-width: 1024px) {
             font-size: 1.5rem;
