--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,5 +1,21 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+@import './globals';
+@import './variables';
+
+// Components 
+
+@import '../components/Button/Button.scss';
+@import '../components/Collapse/Collapse.scss';
+@import '../components/Input/Input.scss';
+@import '../components/PopUp/PopUp.scss';
+
+// Layout
+
+@import '../layout/Header/Header.scss';
+@import '../layout/HeaderCard/HeaderCard.scss';
+
+// Routes
+
+@import '../routes/CreateSecretSanta/CreateSecretSanta.scss';
+@import '../routes/Home/Home.scss';
+@import '../routes/SignIn/SignIn.scss';
+@import '../routes/SignUp/SignUp.scss';
