--- a/src/routes/SignIn/SignIn.scss
+++ b/src/routes/SignIn/SignIn.scss
@@ -6,6 +6,7 @@
     align-items: center;
     justify-content: center;
     margin: 0 16px;
+    margin-top: 70px;
 
     & h2 {
         color: $secondary-color;
@@ -66,7 +67,7 @@
         border-radius: 6px;
     }
 
-    .signup {
+    .signup2 {
         display: flex;
         align-items: center;
         flex-direction: row;
