--- a/src/routes/SignUp/SignUp.scss
+++ b/src/routes/SignUp/SignUp.scss
@@ -5,7 +5,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 0;
+    margin: 0 16px;
+    margin-top: 70px;
 
     & h2 {
         color: $secondary-color;
@@ -66,7 +67,7 @@
         border-radius: 6px;
     }
 
-    .signin {
+    .signin2 {
         display: flex;
         flex-direction: row;
         align-items: center;
