--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -7,6 +7,7 @@
 @import '../components/Collapse/Collapse.scss';
 @import '../components/Input/Input.scss';
 @import '../components/PopUp/PopUp.scss';
+@import '../components/Back/Back.scss';
 
 // Layout
 
