--- a/src/routes/Quizz/Quizz.scss
+++ b/src/routes/Quizz/Quizz.scss
@@ -1,91 +1,60 @@
 @import '../../style/variables';
 
-.form {
-  margin: 0 16px;
-  text-align: center;
+.quizz {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: $secondary-color;
 
-  &__title {
-    &--white {
-      color: $secondary-color;
-    }
-
-    &--yellow {
-      color: $tertiary-color;
-      margin-bottom: 50px;
-    }
-  }
-
-  &__group {
+  .question {
+    width: 240px;
+    height: 400px;
     display: flex;
     flex-direction: column;
-    row-gap: 30px;
-    margin-bottom: 50px;
-  }
-
-  &__catTitle {
-    text-align: center; /* Changed from left to center */
-    margin-bottom: 30px;
-  }
-
-  &__button {
-    text-transform: uppercase;
-    font-size: 14px;
-    font-weight: 500;
-    color: $secondary-color;
-    background-color: $primary-color;
-    border: 2px solid $secondary-color;
-    text-align: center;
-    padding: 7px 35px;
-    margin-bottom: 44px;
-    display: block;
-    margin: 0 auto;
-    border-radius: 5px;
-    font-family: 'Poppins';
-  }
-}
-
-.titles {
-  text-align: center; /* Changed from left to center */
-}
-
-.participant {
-  margin-top: 50px;
-
-  &__buttonContainer {
-    display: flex;
-    justify-content: center;
+    justify-content: space-between; /* Adjust as needed */
     align-items: center;
-    column-gap: 10px;
-  }
 
-  &__button {
-    border-radius: 60px;
-    border: none;
-    width: 40px;
-    height: 40px;
-    background-color: $tertiary-color;
-    color: $secondary-color;
-    font-weight: bold;
-    font-size: 20px;
-  }
+    h2 {
+      text-align: center;
+      margin-bottom: 10px; /* Adjust as needed */
+    }
 
-  &__number {
-    color: $secondary-color;
-  }
+    .test {
+      width: 220px;
+      height: 200px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around; /* Adjust as needed */
+      align-items: center;
+      margin-bottom: 40px;
+    }
 
-  &__container {
-    text-align: center; /* Changed from left to center */
-    display: flex;
-    flex-direction: column;
-    row-gap: 20px;
-    margin-bottom: 50px;
-  }
+    .response-buttons {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
 
-  &__index {
-    color: $secondary-color;
-  }
-}
+      button {
+        margin-bottom: 10px; /* Adjust as needed */
+      }
+    }
 
-.lastInput {
-  background-color: green;
+    .price-question {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      .slider {
+        width: 80%;
+        margin-top: 10px; /* Adjust as needed */
+
+        input {
+          /* Change the color of the slider thumb */
+          &::-webkit-slider-thumb {
+            background-color: $primary-color;
+          }
+        }
+      }
+    }
+  }
 }
