add: center the display

--- a/src/routes/Quizz/Quizz.scss
+++ b/src/routes/Quizz/Quizz.scss
@@ -82,4 +82,13 @@
       }
     }
   }
+  .recommendations {
+    width: 240px;
+    height: 400px;
+    .test {
+      background-color: white;
+      color: black;
+      width: 100px;
+    }
+  }
 }
