--- a/src/routes/Quizz/Quizz.scss
+++ b/src/routes/Quizz/Quizz.scss
@@ -90,6 +90,9 @@
         margin: 10px 0;
       }
     }
+    .title {
+      font-weight: 700;
+    }
 
     .container-recommendations {
       display: flex;
@@ -101,10 +104,10 @@
       width: 1032px;
       height: 100vh;
       border-radius: 10px;
-      font-weight: 500;
 
       .recommendations-title {
         padding-top: 10px;
+        font-weight: 500;
       }
 
       .recommendations-info {
@@ -117,6 +120,7 @@
           display: flex;
           flex-direction: column;
           align-items: center;
+          width: 140px;
           border-radius: 10px;
           box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
           overflow: hidden; // Ajout de cette ligne
@@ -125,19 +129,69 @@
             width: 100px;
             height: 100px;
           }
-          .test {
+          .box-product {
             background-color: rgb(215, 211, 211);
             padding-top: 5px;
-            width: 160px;
+            width: 180px;
           }
           .recommendation-name {
             margin-top: 10px;
             padding: 4px;
+            padding-bottom: 10px;
           }
 
           .recommendation-price {
             margin-top: 5px;
             color: $primary-color;
+            font-weight: 300;
+          }
+        }
+      }
+    }
+  }
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+
+    .question {
+      width: 100%;
+      height: auto;
+
+      .card-question {
+        width: 100%;
+        height: auto;
+      }
+
+      .response-buttons {
+        flex-direction: row;
+
+        button {
+          margin-right: 0;
+          margin-bottom: 15px;
+        }
+      }
+
+      .price-question {
+        .slider {
+          .slider-input {
+            width: 90%;
+          }
+        }
+      }
+    }
+
+    .recommendations {
+      .container-recommendations {
+        width: 100%;
+        height: 100vh;
+
+        .recommendations-info {
+          grid-template-columns: repeat(2, 1fr);
+
+          .recommendation-product {
+            .test {
+              width: 170px;
+            }
           }
         }
       }
