--- a/src/routes/Quizz/Quizz.scss
+++ b/src/routes/Quizz/Quizz.scss
@@ -102,7 +102,7 @@
       background-color: white;
       color: black;
       width: 1032px;
-      height: 100vh;
+      height: auto;
       border-radius: 10px;
 
       .recommendations-title {
@@ -112,7 +112,7 @@
 
       .recommendations-info {
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(4, 1fr);
         gap: 20px;
         padding: 20px;
 
@@ -141,9 +141,7 @@
           }
 
           .recommendation-price {
-            margin-top: 5px;
             color: $primary-color;
-            font-weight: 300;
           }
         }
       }
@@ -183,7 +181,7 @@
     .recommendations {
       .container-recommendations {
         width: 100%;
-        height: 100vh;
+        height: auto;
 
         .recommendations-info {
           grid-template-columns: repeat(2, 1fr);
