--- a/src/layout/Header/Header.scss
+++ b/src/layout/Header/Header.scss
@@ -3,7 +3,7 @@ header {
 
     nav {
         display: flex;
-        justify-content: flex-end;
+        justify-content: space-between;
         align-items: center;
     }
 }
