--- a/src/routes/Summary/Summary.scss
+++ b/src/routes/Summary/Summary.scss
@@ -10,4 +10,31 @@
         color: $secondary-color;
     }
 
+    &__participants {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        column-gap: 20px;
+        margin-top: 20px;
+    }
+
+    &__pill {
+        border: green solid 2px;
+        width: 100%;
+        background-color: $secondary-color;
+        color: $primary-color;
+
+        &>p:first-child {
+            margin: 0;
+            font-size: 24px;
+            font-weight: 500;
+        }
+
+        &>p:first-child {
+            margin: 0;
+            font-size: 24px;
+            font-weight: 500;
+        }
+    }
+
 }
