--- a/src/routes/Summary/Summary.scss
+++ b/src/routes/Summary/Summary.scss
@@ -52,6 +52,7 @@
         background-color: $secondary-color;
         border-radius: 20px;
         color: $primary-color;
+        margin-bottom: 50px;
 
         &>p {
             margin: 0;
