--- a/src/routes/Summary/Summary.scss
+++ b/src/routes/Summary/Summary.scss
@@ -4,6 +4,12 @@
     margin: 0 16px;
     text-align: center;
 
+    @media screen and (min-width: $large) {
+        width: 60%;
+        margin: 0 auto;
+        display: block;
+    }
+
     & h1,
     & .mainTitle__desc {
         text-align: left;
@@ -16,6 +22,10 @@
         align-items: center;
         column-gap: 20px;
         margin-top: 20px;
+
+        @media screen and (min-width: $very-large) {
+            margin: 20px 200px;
+        }
     }
 
     &__pill {
@@ -43,6 +53,11 @@
         border-radius: 20px;
         color: $primary-color;
         margin-bottom: 50px;
+
+        @media screen and (min-width: $very-large) {
+            margin: 20px 200px;
+            margin-bottom: 150px;
+        }
 
         &>p {
             margin: 0;
