--- a/src/routes/Summary/Summary.scss
+++ b/src/routes/Summary/Summary.scss
@@ -114,3 +114,21 @@
     }
 
 }
+
+.waiting-animation {
+    animation: waitingAnimation 1s infinite;
+}
+
+@keyframes waitingAnimation {
+    0% {
+        opacity: 0;
+    }
+
+    50% {
+        opacity: 0.5;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
