--- a/src/routes/Join/Join.scss
+++ b/src/routes/Join/Join.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
     color: $secondary-color;
 
-    & p {
+    &>p {
         margin: 0;
         margin-bottom: 40px;
     }
@@ -21,5 +21,5 @@
         margin-top: 30px;
     }
 
-    
+
 }
