--- a/src/routes/Quizz/Quizz.scss
+++ b/src/routes/Quizz/Quizz.scss
@@ -7,7 +7,8 @@
   color: $secondary-color;
 
   .question {
-    width: 240px;
+    margin-top: 60px;
+    width: 300px;
     height: 400px;
     display: flex;
     flex-direction: column;
@@ -21,7 +22,8 @@
     }
 
     .card-question {
-      width: 220px;
+      font-size: larger;
+      width: 300px;
       height: 220px;
       display: flex;
       flex-direction: column;
@@ -37,6 +39,7 @@
       margin-top: 10px;
 
       button {
+        font-size: larger;
         margin-right: 15px;
         border: none;
         background-color: rgba(180, 3, 3, 0.716);
@@ -47,6 +50,7 @@
     }
 
     .price-question {
+      font-size: larger;
       display: flex;
       flex-direction: column;
       align-items: center;
