ADD Scroll top auto on click

--- a/src/routes/TermsOfUse/TermsOfUse.scss
+++ b/src/routes/TermsOfUse/TermsOfUse.scss
@@ -1,6 +1,7 @@
 .termsOfUseContainer {
   color: white;
   margin-right: 2rem;
+  margin: 2rem 0 0 2rem;
   h1 {
     text-align: center;
     margin-top: 4rem;
