ADD new style file for build

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -17,7 +17,8 @@
 // Routes
 
 @import '../routes/CreateSecretSanta/CreateSecretSanta.scss';
+@import '../routes/ErrorPage/ErrorPage.scss';
 @import '../routes/Home/Home.scss';
+@import '../routes/Profil/Profile.scss';
 @import '../routes/SignIn/SignIn.scss';
 @import '../routes/SignUp/SignUp.scss';
-@import '../routes/Profil/Profile.scss';
