--- a/src/routes/TermsOfUse/TermsOfUse.scss
+++ b/src/routes/TermsOfUse/TermsOfUse.scss
@@ -1,16 +1,32 @@
+@import '../../style/variables';
+
 .termsOfUseContainer {
   color: white;
-  margin-right: 2rem;
-  margin: 2rem 0 0 2rem;
-  h1 {
-    text-align: center;
-    margin-top: 4rem;
-    margin-bottom: 4rem;
+  text-align: center;
+  margin: 44px 16px;
+
+  @media screen and (min-width: $very-large) {
+    margin: 100px 200px;
   }
+
+  h1 {
+    margin: 50px 0;
+
+    @media screen and (min-width: $very-large) {
+      margin: 100px 0;
+    }
+  }
+
   ul {
     list-style-type: decimal;
+    padding-left: 16px;
+    text-align: left;
+    padding-bottom: 44px;
+
+
     li {
-      margin-bottom: 2rem;
+      margin-bottom: 3rem;
+
       strong {
         font-size: 1.2rem;
       }
