--- a/src/routes/EditProfile/EditProfile.scss
+++ b/src/routes/EditProfile/EditProfile.scss
@@ -6,12 +6,14 @@
   justify-content: center;
   align-items: center;
   margin: 0 16px;
-  margin-top: -60px;
+
   .errorModif {
-    color: white;
+    color: $secondary-color;
   }
+
   form {
     width: 100%;
+
     @media screen and (min-width: $medium) {
       width: 80%;
     }
@@ -19,22 +21,23 @@
     @media screen and (min-width: $large) {
       width: 40%;
     }
+
     h2 {
-      margin-bottom: 0;
       color: $secondary-color;
     }
   }
 
   input[type='submit'] {
-    width: 100%;
+    display: block;
+    margin: 0 auto;
     margin-top: 15px;
-    padding: 10px;
-    padding-inline: 40px;
+    padding: 10px 20px;
     border: 2px solid $secondary-color;
     background-color: $primary-color;
     color: $secondary-color;
     cursor: pointer;
     border-radius: 6px;
     margin-top: 3rem;
+    margin-bottom: 40px;
   }
 }
