--- a/src/routes/Summary/Summary.scss
+++ b/src/routes/Summary/Summary.scss
@@ -16,6 +16,20 @@
         color: $secondary-color;
     }
 
+    &__startButton {
+        text-transform: uppercase;
+        font-size: 14px;
+        font-weight: 500;
+        color: $secondary-color;
+        background-color: $primary-color;
+        border: 2px solid $secondary-color;
+        text-align: center;
+        padding: 7px 35px;
+        display: block;
+        border-radius: 5px;
+        font-family: 'Poppins';
+    }
+
     &__participants {
         display: flex;
         justify-content: space-between;
