ADD cursor pointer

--- a/src/routes/Summary/Summary.scss
+++ b/src/routes/Summary/Summary.scss
@@ -25,6 +25,7 @@
         border: 2px solid $secondary-color;
         text-align: center;
         padding: 7px 35px;
+        cursor: pointer;
         display: block;
         border-radius: 5px;
         font-family: 'Poppins';
