--- a/src/routes/Quizz/Quizz.scss
+++ b/src/routes/Quizz/Quizz.scss
@@ -1,120 +1,85 @@
 @import '../../style/variables';
 
 .quizz {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  margin: 0 16px;
+  text-align: center;
   color: $secondary-color;
 
-  .question {
-    margin-top: 60px;
-    width: 300px;
-    height: 400px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    font-weight: 600;
+  &__cardQuestion {
+    width: 200px;
+    display: block;
+    margin: 0 auto;
+    height: 250px;
+    border-radius: 20px;
+    margin-bottom: 20px;
+    margin-top: 50px;
+    background-color: $primary-color;
+    transition: transform 0.5s ease, opacity 0.5s ease;
+    opacity: 1;
 
-    h2 {
-      text-align: center;
-      margin-bottom: 10px;
+    &.swipe-right {
+      transform: translateX(100%);
     }
 
-    .card-question {
-      font-size: larger;
-      width: 300px;
-      height: 220px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around;
-      align-items: center;
-      padding-bottom: 40px;
+    &.swipe-left {
+      transform: translateX(-100%);
     }
 
-    .response-buttons {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      margin-top: 10px;
-
-      button {
-        font-size: larger;
-        margin-right: 15px;
-        border: none;
-        background-color: rgba(180, 3, 3, 0.716);
-        padding: 10px;
-        border-radius: 10px;
-        cursor: pointer;
-      }
-    }
-
-    .price-question {
-      font-size: larger;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      span {
-        padding-top: 20px;
-      }
-      .slider {
-        width: 100%;
-
-        .slider-input {
-          background: #d61920;
-          height: 20px;
-          width: 100%;
-          &::-webkit-slider-thumb {
-            background-color: white(227, 62, 62);
-          }
-
-          &::-webkit-slider-runnable-track {
-            background-color: red;
-          }
-
-          &::-moz-range-thumb {
-            border: none;
-            background-color: rgb(255, 0, 0);
-            cursor: pointer;
-          }
-
-          &::-moz-range-track {
-            height: 5px;
-            background-color: rgba(180, 3, 3, 0.716);
-          }
-        }
-      }
+    &.exit {
+      opacity: 0;
+      transition: opacity 0.5s ease;
     }
   }
 
-  @media (max-width: 768px) {
-    flex-direction: column;
+  &__questionText {
+    margin-bottom: 30px;
+    padding-top: 20px;
+  }
 
-    .question {
-      width: 100%;
-      height: auto;
+  &__questionImage {
+    width: 100px;
+    height: 100px
+  }
 
-      .card-question {
-        width: 100%;
-        height: auto;
-      }
+  &__responseButtons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 20px;
+    margin-bottom: 40px;
 
-      .response-buttons {
-        flex-direction: row;
-
-        button {
-          margin-right: 0;
-          margin-bottom: 15px;
-        }
-      }
-
-      .price-question {
-        .slider {
-          .slider-input {
-            width: 90%;
-          }
-        }
-      }
+    &>button {
+      padding: 10px 15px;
+      border-radius: 10px;
+      font-size: 24px;
+      background-color: #BD151C;
+      border: none;
+      outline: none;
     }
+  }
+}
+
+.slider {
+  width: 100%;
+
+  @media screen and (min-width: $large) {
+    width: 50%;
+    margin: 0 auto;
+    display: block;
+  }
+
+  input[type=range].custom__input {
+    margin-top: 40px;
+    width: 80%;
+    cursor: pointer;
+    -webkit-appearance: none;
+    appearance: none;
+    padding: 0;
+    font: inherit;
+    outline: none;
+    background: #BD151C;
+    height: 5px;
+    border-radius: 60px;
+    box-sizing: border-box;
   }
 }
