--- a/src/routes/Quizz/Quizz.scss
+++ b/src/routes/Quizz/Quizz.scss
@@ -1,198 +1,85 @@
 @import '../../style/variables';
 
 .quizz {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  margin: 0 16px;
+  text-align: center;
   color: $secondary-color;
 
-  .question {
-    width: 240px;
-    height: 400px;
+  &__cardQuestion {
+    width: 200px;
+    display: block;
+    margin: 0 auto;
+    height: 250px;
+    border-radius: 20px;
+    margin-bottom: 20px;
+    margin-top: 50px;
+    background-color: $primary-color;
+    transition: transform 0.5s ease, opacity 0.5s ease;
+    opacity: 1;
+
+    &.swipe-right {
+      transform: translateX(100%);
+    }
+
+    &.swipe-left {
+      transform: translateX(-100%);
+    }
+
+    &.exit {
+      opacity: 0;
+      transition: opacity 0.5s ease;
+    }
+  }
+
+  &__questionText {
+    margin-bottom: 30px;
+    padding-top: 20px;
+  }
+
+  &__questionImage {
+    width: 100px;
+    height: 100px
+  }
+
+  &__responseButtons {
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-    font-weight: 600;
+    column-gap: 20px;
+    margin-bottom: 40px;
 
-    h2 {
-      text-align: center;
-      margin-bottom: 10px;
-    }
-
-    .card-question {
-      width: 220px;
-      height: 220px;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around;
-      align-items: center;
-      padding-bottom: 40px;
-    }
-
-    .response-buttons {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      margin-top: 10px;
-
-      button {
-        margin-right: 15px;
-        border: none;
-        background-color: rgba(180, 3, 3, 0.716);
-        padding: 10px;
-        border-radius: 10px;
-        cursor: pointer;
-      }
-    }
-
-    .price-question {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      span {
-        padding-top: 20px;
-      }
-      .slider {
-        width: 100%;
-
-        .slider-input {
-          background: #d61920;
-          height: 20px;
-          width: 100%;
-          &::-webkit-slider-thumb {
-            background-color: white(227, 62, 62);
-          }
-
-          &::-webkit-slider-runnable-track {
-            background-color: red;
-          }
-
-          &::-moz-range-thumb {
-            border: none;
-            background-color: rgb(255, 0, 0);
-            cursor: pointer;
-          }
-
-          &::-moz-range-track {
-            height: 5px;
-            background-color: rgba(180, 3, 3, 0.716);
-          }
-        }
-      }
-    }
-  }
-  .recommendations {
-    text-align: center;
-
-    > div {
-      p {
-        margin: 10px 0;
-      }
-    }
-    .title {
-      font-weight: 700;
-    }
-
-    .container-recommendations {
-      display: flex;
-      flex-direction: column;
-      align-items: center; // Ajouté pour centrer la grille
-
-      background-color: white;
-      color: black;
-      width: 1032px;
-      height: auto;
+    &>button {
+      padding: 10px 15px;
       border-radius: 10px;
-
-      .recommendations-title {
-        padding-top: 10px;
-        font-weight: 500;
-      }
-
-      .recommendations-info {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        gap: 20px;
-        padding: 20px;
-
-        .recommendation-product {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-          width: 140px;
-          border-radius: 10px;
-          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-          overflow: hidden; // Ajout de cette ligne
-
-          .recommendations-image {
-            width: 100px;
-            height: 100px;
-          }
-          .box-product {
-            background-color: rgb(215, 211, 211);
-            padding-top: 5px;
-            width: 180px;
-          }
-          .recommendation-name {
-            margin-top: 10px;
-            padding: 4px;
-            padding-bottom: 10px;
-          }
-
-          .recommendation-price {
-            color: $primary-color;
-          }
-        }
-      }
+      font-size: 24px;
+      background-color: #BD151C;
+      border: none;
+      outline: none;
     }
   }
+}
 
-  @media (max-width: 768px) {
-    flex-direction: column;
+.slider {
+  width: 100%;
 
-    .question {
-      width: 100%;
-      height: auto;
+  @media screen and (min-width: $large) {
+    width: 50%;
+    margin: 0 auto;
+    display: block;
+  }
 
-      .card-question {
-        width: 100%;
-        height: auto;
-      }
-
-      .response-buttons {
-        flex-direction: row;
-
-        button {
-          margin-right: 0;
-          margin-bottom: 15px;
-        }
-      }
-
-      .price-question {
-        .slider {
-          .slider-input {
-            width: 90%;
-          }
-        }
-      }
-    }
-
-    .recommendations {
-      .container-recommendations {
-        width: 100%;
-        height: auto;
-
-        .recommendations-info {
-          grid-template-columns: repeat(2, 1fr);
-
-          .recommendation-product {
-            .test {
-              width: 170px;
-            }
-          }
-        }
-      }
-    }
+  input[type=range].custom__input {
+    margin-top: 40px;
+    width: 80%;
+    cursor: pointer;
+    -webkit-appearance: none;
+    appearance: none;
+    padding: 0;
+    font: inherit;
+    outline: none;
+    background: #BD151C;
+    height: 5px;
+    border-radius: 60px;
+    box-sizing: border-box;
   }
 }
